# rust-wfa2

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
src/: aligner.rs  lib.rs
src/aligner/: attributes.rs  builder.rs  cigar.rs  config.rs  facade.rs  lambda.rs  mod.rs  packed2bits.rs  raw.rs  span.rs  tests.rs
tests/: wfa2_reference.rs
wfa2-sys/: Cargo.toml  build.rs
wfa2-sys/src/: lib.rs
