[package]
name = "rust-wfa2"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[workspace]
members = ["wfa2-sys"]

[features]
default = []
openmp = ["wfa2-sys/openmp"]
serde = ["dep:serde"]
# Opt-in native codegen forwarded to wfa2-sys (off by default; see wfa2-sys).
avx2 = ["wfa2-sys/avx2"]
native = ["wfa2-sys/native"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
wfa2-sys = { version = "*", path = "wfa2-sys" }

[dev-dependencies]
serde_json = "1.0"
